--- a/package.json
+++ b/package.json
@@ -6,5 +6,6 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs && node scripts/sitemap.js",
     "docs:preview": "vitepress preview docs"
-  }
+  },
+  "type": "module"
 }
