--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "vitepress": "^2.0.0-alpha.12"
   },
   "scripts": {
-    "docs:dev": "vitepress dev docs",
+    "docs:dev": "node scripts/dev-links.js",
     "docs:build": "vitepress build docs && node scripts/sitemap.js",
     "docs:preview": "vitepress preview docs"
   },
